fix center align for load more message

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -488,6 +488,7 @@ $lists-max-width: 700px;
   }
 
   .more {
+    width: 100%;
     text-align: center;
     font-size: .8rem;
     margin: 1.5rem auto;
